Fix contact button alignment

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -46,14 +46,14 @@ button {
 }
 
 .container {
-    width: 50%;
+    width: 70%;
     height: 100%;
     margin: 0 auto;
 }
 
 .intro {
     width: 100%;
-    margin: 50% auto 1% auto;
+    margin: 25% auto 1% auto;
 }
 .intro span {
     font-size: 1.1em;
